tests/miniJava/neg/004370_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public new int [] java ( ) { return 0 ; } }
